--- a/src/Components/HomeScreen/homeScreen.css
+++ b/src/Components/HomeScreen/homeScreen.css
@@ -3,17 +3,17 @@
   text-decoration: none;
 }
 
-.Login-button {
+.continue-button {
   width: 100%;
   height: 100%;
   padding: 10px 20px;
-  border: none;
-  background-color: #007bff;
-  color: white;
+  border: 1px solid black;
+  background-color: white;
+  color: black;
   cursor: pointer;
-  text-align: center;
+  justify-content: center;
 }
 
-.Login-button:hover {
-  background-color: #0056b3;
+.continue-button:hover {
+  background-color: #dff9de;
 }
