--- a/src/Components/LogInScreen/loginScreen.css
+++ b/src/Components/LogInScreen/loginScreen.css
@@ -1,14 +1,17 @@
 .login-input {
   width: 100%;
-  border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 0 10px;
   margin-bottom: 10px;
   font-size: 16px;
   box-sizing: border-box;
   display: grid;
+  text-align: left;
 }
 
 .login.username {
   margin-bottom: 20px;
+}
+
+.text-box {
+  height: 2.5em;
 }
