--- a/src/Components/LogInScreen/loginScreen.css
+++ b/src/Components/LogInScreen/loginScreen.css
@@ -15,3 +15,10 @@
 .text-box {
   height: 2.5em;
 }
+
+.informaton-message {
+  font-size: 14px;
+  margin-top: 5px;
+  width: 50%;
+  display: inline-block;
+}
