--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,7 @@
 .beer-logo {
+  top: 0;
   padding-left: 15px;
+  padding-top: 10px;
   width: 200px;
   height: 200px;
   animation: rotation 6s infinite linear;
@@ -13,4 +15,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.header-bar {
 }
