--- a/src/Components/QuestionsScreen/questionsScreen.css
+++ b/src/Components/QuestionsScreen/questionsScreen.css
@@ -81,3 +81,10 @@
   cursor: not-allowed;
   color: #aaa;
 }
+
+.header {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 18px;
+}
